--- a/src/container/index/index.scss
+++ b/src/container/index/index.scss
@@ -1,7 +1,128 @@
-@use '../../style' as s;
+.page {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+p {
+  display: inline;
+}
 
 main {
-	background: s.color(dark);
-	color: s.color(light);
-	padding: s.space(4);
-} 
+  max-width: 600px;
+  width: 100%;
+  height: 400px;
+  position: relative;
+  margin: 0 auto;
+}
+
+.slider {
+  &__content {
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: row;
+    .slider__image {
+      display: inline;
+      height: 400px;
+      width: 100%;
+      border-radius: 16px;
+    }
+  }
+
+  &__arrow {
+    height: 32px;
+    width: 32px;
+    padding: 4px;
+    border-radius: 50%;
+    background-color: #fff;
+    position: absolute;
+    top: calc(50% - (32px / 2));
+    transition: opacity 0.7s;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    &--left {
+      left: 24px;
+    }
+
+    &--right {
+      right: 24px;
+    }
+  }
+}
+
+.header {
+  position: absolute;
+  top: 0;
+  max-width: 600px;
+  width: 100%;
+  left: calc(50% - 300px);
+  z-index: 1;
+  background-color: #fff;
+
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    padding: 24px 0;
+    border-bottom: 1px solid #dee2e6;
+  }
+
+  &__list {
+    display: flex;
+    gap: 24px;
+
+    &--top {
+      flex-direction: column;
+      gap: 12px;
+    }
+  }
+
+  &__item {
+    color: #343a40;
+    font-size: 16px;
+
+    height: 24px;
+    display: flex;
+    align-items: center;
+    transition: opacity 0.7s;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+
+  &__icon {
+    height: 24px;
+    width: 24px;
+    background-position: center center;
+    background-repeat: no-repeat;
+
+    &--open {
+      background-image: url('/svg/menu-icon.svg');
+    }
+
+    &--close {
+      background-image: url('/svg/menu-cross.svg');
+    }
+
+    transition: opacity 0.7s;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+
+  &__bottom {
+    padding: 24px 0;
+    border-bottom: 1px solid #dee2e6;
+  }
+
+  &__wrapper {
+    overflow: hidden;
+    transition: height 0.7s;
+    height: 0px;
+  }
+}
